Use slimmer jdk in image